fix: move anchor-heading on right side of header (fixes wacky alignment on small screens too).

--- a/_sass/markdown/_content.scss
+++ b/_sass/markdown/_content.scss
@@ -178,16 +178,14 @@
 
   .anchor-heading {
     position: absolute;
-    right: -$sp-4;
     width: $sp-5;
     height: 100%;
     padding-right: $sp-1;
-    padding-left: $sp-1;
+    padding-left: $sp-2;
     overflow: visible;
 
     @include mq(md) {
-      right: auto;
-      left: -$sp-5;
+      padding-left: $sp-2;
     }
 
     .anchor-tag {
